k8s/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: multi-k8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
              claimName: database-persistent-volume-claim
      containers:
      - name: postgres
        image: postgres
        resources:
          limits:
            memory: "64Mi"
            cpu: "50m"
        ports:
        - containerPort: 5432
        volumeMounts:
          - name:  postgres-storage
            mountPath: /var/lib/postgresql/data
            subPath: postgres
