k8s/worker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
  namespace: multi-k8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: multi-worker
        image: jzhao5/multi-worker2
        imagePullPolicy: "Always"
        resources:
          limits:
            memory: "64Mi"
            cpu: "50m"
