k8s/server-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
  namespace: multi-k8s
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
  - port: 5000
    targetPort: 5000
